reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__apply.rs_line_841_col_5.log

*** crates/tracewake-core/src/events/apply.rs:841:5: replace parse_belief_payload -> Result<Belief, EpistemicApplyError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/events/apply.rs
+++ replace parse_belief_payload -> Result<Belief, EpistemicApplyError> with Ok(Default::default())
@@ -833,45 +833,17 @@
     let value = required_epistemic(payload, key)?;
     value.parse().map_err(|_| EpistemicApplyError::BadPayload {
         key,
         value: value.to_string(),
     })
 }
 
 fn parse_belief_payload(payload: &BTreeMap<&str, &str>) -> Result<Belief, EpistemicApplyError> {
-    let holder_actor_id = parse_actor_id_epistemic(payload, "holder_actor_id")
-        .map_err(|_| EpistemicApplyError::MissingHolder)?;
-    let source_event_id = parse_event_id_epistemic(payload, "source_event_id")
-        .map_err(|_| EpistemicApplyError::MissingSource)?;
-    let mut belief = Belief::new(
-        parse_belief_id(payload, "belief_id")?,
-        HolderKind::Actor(holder_actor_id),
-        parse_proposition(payload, "proposition")?,
-        parse_stance(payload)?,
-        parse_confidence(payload)?,
-        SourceRef::Event(source_event_id),
-        parse_tick(payload, "acquired_tick")?,
-    );
-    if payload.contains_key("channel") {
-        belief = belief.with_channel(parse_channel(payload)?);
-    }
-    belief = belief.with_last_verified_tick(parse_optional_tick(payload, "last_verified_tick")?);
-    belief = belief.with_stale_after_tick(parse_optional_tick(payload, "stale_after_tick")?);
-    if let Some(observation_ids) = payload.get("observation_ids") {
-        for observation_id in parse_observation_ids(observation_ids)? {
-            belief = belief.with_observation(observation_id);
-        }
-    }
-    if let Some(contradiction_ids) = payload.get("contradiction_ids") {
-        for contradiction_id in parse_contradiction_ids(contradiction_ids)? {
-            belief = belief.with_contradiction(contradiction_id);
-        }
-    }
-    Ok(belief)
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn parse_observation_ids(value: &str) -> Result<Vec<ObservationId>, EpistemicApplyError> {
     value
         .split(',')
         .filter(|part| !part.is_empty())
         .map(|part| {
             ObservationId::new(part).map_err(|_| EpistemicApplyError::BadPayload {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `HolderKind`
 --> crates/tracewake-core/src/events/apply.rs:7:89
  |
7 |     Belief, Channel, Confidence, Contradiction, ContradictionKind, EpistemicProjection, HolderKind,
  |                                                                                         ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `Belief: Default` is not satisfied
   --> crates/tracewake-core/src/events/apply.rs:841:8
    |
841 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `Belief`
   --> crates/tracewake-core/src/epistemics/belief.rs:40:1
    |
 40 | pub struct Belief {
    | ^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `belief::Belief: Default` is not satisfied
   --> crates/tracewake-core/src/events/apply.rs:841:8
    |
841 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `belief::Belief`
   --> crates/tracewake-core/src/epistemics/belief.rs:40:1
    |
 40 | pub struct Belief {
    | ^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
